# shardmap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INTERNALS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: shardmapConfig.cmake.in
include/jcailloux/shardmap/: ShardMap.h
tests/: CMakeLists.txt  CacheAccessor.h  KeyTrackerAccessor.h  README.md  main.cpp  test_cache_advanced.cpp  test_cache_basic.cpp  test_cache_concurrent.cpp  test_shardmap_basic.cpp  test_shardmap_benchmark.cpp  test_shardmap_callbacks.cpp  test_shardmap_cleanup.cpp  test_shardmap_concurrent.cpp
